# Symmetric-Interaction-Calculus

./: Cargo.toml  test.sic
examples/: example.rs  example.sic
src/: extra.rs  main.bkup.rs  main.rs  net.rs  term.rs
