[package]
name = "symmetric-interaction-calculus"
version = "0.1.8"
description = "A programming language and model of computation that matches the abstract algorithm perfectly."
license = "MIT"
authors = ["Victor Maia <srvictormaia@gmail.com>"]
repository = "https://github.com/maiavictor/symmetric-interaction-calculus"
edition = "2021"

[features]
default = []
cli = ["clap"]

[dependencies]
clap = { version = "2.26.0", optional = true }

[[bin]]
name = "sic"
path = "src/main.rs"
required-features = ["clap"]
